--- a/Esterni/Analisi_dei_requisiti/diario.tex
+++ b/Esterni/Analisi_dei_requisiti/diario.tex
@@ -2,6 +2,14 @@
 % da includere con \include{diario}
 
 \begin{diario}
+	4.0.0 & {\LB} (Responsabile) & 02/05/2017 & Approvazione del documento \\ \hline
+	4.1.0 & {\PB} (Verificatore) & 02/05/2017 & Verifica del documento \\ \hline
+	3.0.1 & {\MM} (Analista) & 01/05/2017 & 
+	\begin{itemize}
+	\item Inserimento UC5.35;
+	\item Inserimento UC8 e relativo requisito;
+	\item Inserimento tabella Requisiti Implementati come appendice.
+\end{itemize}\\ \hline
 	3.0.0 & {\AZ} (Responsabile) & 19/03/2017 & Approvazione del documento \\ \hline
 	2.1.0 & {\MM} (Verificatore) & 19/03/2017 & Verifica del documento \\ \hline
 	2.0.3 & {\PB} (Progettista) & 18/03/2017 &  
